--- a/Assignment2.html
+++ b/Assignment2.html
@@ -49,7 +49,7 @@
             <li><a class="active" href="#">Home</a></li>
             <li><a href="#">News</a></li>
             <li><a href="#">Contact</a></li>
-            <li class="right"><a href="#">About</a></li>
+            <li class="right"><a href="#">About Us</a></li>
         </ul>
     </body>
 </html>
